{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3edf5256-1847-4950-b5f9-c2adbe1b2ca6",
            "actions": [
                {
                    "name": "MouseAction",
                    "type": "Button",
                    "id": "bb06a0a8-f2b3-4545-b273-9204e34c7eb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "dbb80500-951d-4ebf-90e5-9b63791b4006",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67befe50-257b-4ab5-932b-5b26c886af40",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfd214a2-1f31-431e-92b1-4ae679fce67d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}